Fixed navbar font size on smaller phones

--- a/css/style.css
+++ b/css/style.css
@@ -357,3 +357,10 @@ img {
     width: 95%;
   }
 }
+
+@media (max-width: 400px) {
+  .navbar a {
+    font-size: 0.8rem;
+  }
+
+}
